--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-jest": "22.4.1",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.18.2",
+    "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-react": "^7.7.0",
     "jest": "22.4.2",
     "react-test-renderer": "^16.3.0-alpha.1"
