--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
   "dependencies": {
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
-    "react-navigation": "^1.4.0"
+    "react-navigation": "^1.4.0",
+    "react-navigation-redux-debouncer": "^0.0.2",
+    "react-navigation-redux-helpers": "^1.0.3",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "babel-jest": "22.4.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.18.2",
     "eslint-plugin-flowtype": "^2.46.1",
