--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
+    "react-native-blur": "^3.2.2",
+    "react-native-haptic": "^1.0.5",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.4.0",
     "react-navigation-redux-debouncer": "^0.0.2",
     "react-navigation-redux-helpers": "^1.0.3",
