--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "./node_modules/.bin/eslint --ext .js index.js src/ __tests__/ __mocks__/"
   },
   "dependencies": {
+    "bip39": "^2.5.0",
     "deepmerge": "^2.1.0",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
