--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   },
   "dependencies": {
     "bip39": "^2.5.0",
+    "buffer": "^5.1.0",
     "deepmerge": "^2.1.0",
+    "events": "^2.0.0",
+    "process": "^0.11.10",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-blur": "^3.2.2",
+    "react-native-crypto": "^2.1.2",
     "react-native-haptic": "^1.0.5",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-randombytes": "^3.0.0",
@@ -30,13 +34,16 @@
     "react-navigation-redux-debouncer": "^0.0.2",
     "react-navigation-redux-helpers": "^1.0.3",
     "react-redux": "^5.0.7",
+    "readable-stream": "^2.3.5",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.2.1",
+    "vm-browserify": "^0.0.4"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.2",
     "babel-jest": "22.4.1",
+    "babel-plugin-rewrite-require": "^1.14.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "4.0.0",
     "eslint": "^4.18.2",
