Add Buffer to eslint globals

--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,8 @@
   },
   "globals": {
     "Promise": true,
-    "global": true
+    "global": true,
+    "Buffer": true
   },
   "rules": {
     "eqeqeq": ["error", "smart"],
