Install react-native-keyboard-spacer

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-crypto": "^2.1.2",
     "react-native-haptic": "^1.0.5",
     "react-native-iphone-x-helper": "^1.0.2",
+    "react-native-keyboard-spacer": "^0.4.1",
     "react-native-randombytes": "^3.0.0",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.4.0",
