--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
   "globals": {
     "Promise": true,
     "global": true,
-    "Buffer": true
+    "Buffer": true,
+    "__DEV__": true
   },
   "rules": {
     "eqeqeq": ["error", "smart"],
