Install bitcoinjs and assert
The `assert` dependency is required by the `bigi` package which
`bitcoinjs-lib` is dependent on.

It's likely more dependencies will have to be installed in the
future as more features are being used.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "lint": "./node_modules/.bin/eslint --ext .js index.js src/ __tests__/ __mocks__/"
   },
   "dependencies": {
+    "assert": "^1.4.1",
     "bip39": "^2.5.0",
+    "bitcoinjs-lib": "^3.3.2",
     "buffer": "^5.1.0",
     "deepmerge": "^2.1.0",
     "events": "^2.0.0",
