--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-randombytes": "^3.0.0",
+    "react-native-text-gradient": "^0.0.7",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.4.0",
     "react-navigation-redux-debouncer": "^0.0.2",
