--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "WalletID",
+  "name": "Payla",
   "version": "0.0.1",
   "private": true,
   "author": "Timothy Engqvist Johansson <timothy@blockfirm.se>",
-  "website": "https://walletid.co",
+  "website": "https://payla.app",
   "copyright": "© 2018 Blockfirm AB",
   "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "https://github.com/blockfirm/wallet-id-app.git"
+    "url": "https://github.com/blockfirm/payla-app.git"
   },
-  "bugs": "https://github.com/blockfirm/wallet-id-app/issues",
+  "bugs": "https://github.com/blockfirm/payla-app/issues",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
