--- a/ios/Payla.xcodeproj/xcshareddata/xcschemes/Payla-tvOS.xcscheme
+++ b/ios/Payla.xcodeproj/xcshareddata/xcschemes/Payla-tvOS.xcscheme
@@ -29,9 +29,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "WalletID-tvOS.app"
-               BlueprintName = "WalletID-tvOS"
-               ReferencedContainer = "container:WalletID.xcodeproj">
+               BuildableName = "Payla-tvOS.app"
+               BlueprintName = "Payla-tvOS"
+               ReferencedContainer = "container:Payla.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
          <BuildActionEntry
@@ -43,9 +43,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "WalletID-tvOSTests.xctest"
-               BlueprintName = "WalletID-tvOSTests"
-               ReferencedContainer = "container:WalletID.xcodeproj">
+               BuildableName = "Payla-tvOSTests.xctest"
+               BlueprintName = "Payla-tvOSTests"
+               ReferencedContainer = "container:Payla.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -54,6 +54,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
          <TestableReference
@@ -61,9 +62,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "WalletID-tvOSTests.xctest"
-               BlueprintName = "WalletID-tvOSTests"
-               ReferencedContainer = "container:WalletID.xcodeproj">
+               BuildableName = "Payla-tvOSTests.xctest"
+               BlueprintName = "Payla-tvOSTests"
+               ReferencedContainer = "container:Payla.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -71,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "WalletID-tvOS.app"
-            BlueprintName = "WalletID-tvOS"
-            ReferencedContainer = "container:WalletID.xcodeproj">
+            BuildableName = "Payla-tvOS.app"
+            BlueprintName = "Payla-tvOS"
+            ReferencedContainer = "container:Payla.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -83,6 +84,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
+      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
@@ -94,9 +96,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "WalletID-tvOS.app"
-            BlueprintName = "WalletID-tvOS"
-            ReferencedContainer = "container:WalletID.xcodeproj">
+            BuildableName = "Payla-tvOS.app"
+            BlueprintName = "Payla-tvOS"
+            ReferencedContainer = "container:Payla.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -113,9 +115,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "WalletID-tvOS.app"
-            BlueprintName = "WalletID-tvOS"
-            ReferencedContainer = "container:WalletID.xcodeproj">
+            BuildableName = "Payla-tvOS.app"
+            BlueprintName = "Payla-tvOS"
+            ReferencedContainer = "container:Payla.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
