--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^3.0.0-rc.3",
+    "react-native-linear-gradient": "^2.4.0",
     "react-native-randombytes": "^3.0.0",
     "react-native-text-gradient": "^0.0.7",
     "react-native-vector-icons": "^4.5.0",
