--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
     "test-coverage": "jest --coverage",
-    "lint": "./node_modules/.bin/eslint --ext .js index.js src/ __tests__/ __mocks__/"
+    "lint": "./node_modules/.bin/eslint --ext .js index.js src/ __tests__/ __mocks__/",
+    "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | node_modules/.bin/coveralls"
   },
   "dependencies": {
     "assert": "^1.4.1",
@@ -53,6 +54,7 @@
     "babel-plugin-rewrite-require": "^1.14.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-react-native": "4.0.0",
+    "coveralls": "^3.0.2",
     "eslint": "^4.18.2",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-react": "^7.7.0",
