Upgrade bitcoinjs-lib to v4 from v3

--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "dependencies": {
     "assert": "^1.4.1",
+    "bip32": "^1.0.2",
     "bip39": "^2.5.0",
-    "bitcoinjs-lib": "^3.3.2",
+    "bitcoinjs-lib": "^4.0.1",
     "buffer": "^5.1.0",
     "deepmerge": "^2.1.0",
     "events": "^2.0.0",
