--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "buffer": "^5.1.0",
     "deepmerge": "^2.1.0",
     "events": "^2.0.0",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "process": "^0.11.10",
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
