--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-linear-gradient": "^2.4.0",
     "react-native-randombytes": "^3.0.0",
+    "react-native-swiper": "^1.5.13",
     "react-native-text-gradient": "^0.0.7",
     "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.4.0",
