--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.3.0-alpha.1",
     "react-native": "0.54.0",
     "react-native-blur": "^3.2.2",
+    "react-native-camera": "^1.3.0",
     "react-native-crypto": "^2.1.2",
     "react-native-haptic": "^1.0.5",
     "react-native-iphone-x-helper": "^1.0.2",
