Add --forceExit and --maxWorkers=4 to jest to try to get travis to work

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": "https://github.com/blockfirm/payla-app/issues",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
+    "test": "jest --forceExit --maxWorkers=4",
     "test-coverage": "jest --coverage",
     "lint": "./node_modules/.bin/eslint --ext .js index.js src/ __tests__/ __mocks__/",
     "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | node_modules/.bin/coveralls"
