--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-camera": "^1.3.0",
     "react-native-crypto": "^2.1.2",
     "react-native-haptic": "^1.0.5",
+    "react-native-icloudstore": "^0.9.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^3.0.0-rc.3",
