Upgrade all dependencies to their latest version
E.g. upgrade react native from 0.54 to 0.57.

--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,33 @@
 {
-  "presets": ["react-native"],
+  "presets": [
+    "module:metro-react-native-babel-preset",
+    "@babel/preset-flow"
+  ],
   "sourceMaps": true,
   "plugins": [
-    "transform-decorators-legacy",
-    ["rewrite-require", {
-      "aliases": {
-        "crypto": "react-native-crypto",
-        "stream": "readable-stream",
-        "_stream_duplex": "readable-stream/duplex",
-        "_stream_passthrough": "readable-stream/passthrough",
-        "_stream_readable": "readable-stream/readable",
-        "_stream_transform": "readable-stream/transform",
-        "_stream_writable": "readable-stream/writable",
-        "vm": "vm-browserify"
-      },
-      "throwForNonStringLiteral": true
-    }]
+    "@babel/plugin-transform-flow-strip-types",
+    "@babel/plugin-proposal-class-properties",
+    [
+      "@babel/plugin-proposal-decorators",
+      {
+        "legacy": true
+      }
+    ],
+    [
+      "rewrite-require",
+      {
+        "aliases": {
+          "crypto": "react-native-crypto",
+          "stream": "readable-stream",
+          "_stream_duplex": "readable-stream/duplex",
+          "_stream_passthrough": "readable-stream/passthrough",
+          "_stream_readable": "readable-stream/readable",
+          "_stream_transform": "readable-stream/transform",
+          "_stream_writable": "readable-stream/writable",
+          "vm": "vm-browserify"
+        },
+        "throwForNonStringLiteral": true
+      }
+    ]
   ]
 }
