--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "bitcoinjs-lib": "^4.0.1",
     "buffer": "^5.1.0",
     "deepmerge": "^2.1.0",
-    "events": "^2.0.0",
+    "events": "^3.0.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "process": "^0.11.10",
-    "react": "^16.3.0-alpha.1",
-    "react-native": "0.54.0",
+    "react": "^16.6.0-alpha.8af6728",
+    "react-native": "0.57.4",
     "react-native-blur": "^3.2.2",
     "react-native-camera": "^1.3.0",
     "react-native-crypto": "^2.1.2",
@@ -42,32 +42,36 @@
     "react-native-linear-gradient": "^2.4.2",
     "react-native-randombytes": "^3.0.0",
     "react-native-swiper": "^1.5.13",
-    "react-native-text-gradient": "^0.0.7",
-    "react-native-vector-icons": "^4.5.0",
-    "react-navigation": "^1.4.0",
-    "react-navigation-redux-debouncer": "^0.0.2",
-    "react-navigation-redux-helpers": "^1.0.3",
+    "react-native-text-gradient": "^0.0.16",
+    "react-native-vector-icons": "^6.0.2",
+    "react-navigation": "^2.18.2",
+    "react-navigation-redux-helpers": "^2.0.8",
     "react-qr-code": "^0.1.2",
     "react-redux": "^5.0.7",
-    "readable-stream": "^2.3.5",
-    "redux": "^3.7.2",
+    "readable-stream": "^3.0.6",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "uuid": "^3.2.1",
-    "vm-browserify": "^0.0.4"
+    "vm-browserify": "^1.1.0"
   },
   "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "babel-jest": "22.4.1",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.1.2",
+    "@babel/plugin-transform-flow-strip-types": "^7.0.0",
+    "@babel/preset-flow": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.4.2",
     "babel-plugin-rewrite-require": "^1.14.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-preset-react-native": "4.0.0",
     "coveralls": "^3.0.2",
-    "eslint": "^4.18.2",
-    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint": "^5.8.0",
+    "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "22.4.2",
-    "react-test-renderer": "^16.3.0-alpha.1",
-    "reactotron-react-native": "^1.14.0"
+    "jest": "23.6.0",
+    "react-test-renderer": "^16.6.0-alpha.8af6728",
+    "reactotron-react-native": "^2.1.0"
   },
   "jest": {
     "preset": "react-native",
