Use FlatList instead of react-native-swiper
react-native-swiper is no longer maintained and contains a lot of bugs.
FlatList is a standard React Native component that seems to be working
exactly the same for this use-case but without the extra dependency.

At the same time, this commit also makes sure to pause the camera
preview when it's not active or being swiped to.

--- a/ios/Payla/Info.plist
+++ b/ios/Payla/Info.plist
@@ -40,7 +40,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>For scanning QR codes.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Entypo.ttf</string>
