--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bip39": "^2.5.0",
     "bitcoinjs-lib": "^4.0.1",
     "buffer": "^5.1.0",
+    "coinselect": "^3.1.11",
     "deepmerge": "^2.1.0",
     "events": "^3.0.0",
     "moment": "^2.22.2",
