Use Face ID/Touch ID/Passcode when signing transactions

--- a/ios/Pine/Info.plist
+++ b/ios/Pine/Info.plist
@@ -37,6 +37,8 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>For scanning QR codes.</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>For signing transactions.</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>UIAppFonts</key>
