--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-camera": "^1.3.0",
     "react-native-crypto": "^2.1.2",
     "react-native-haptic": "^1.0.9",
+    "react-native-icloud-account-status": "^1.0.1",
     "react-native-icloudstore": "^0.9.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-spacer": "^0.4.1",
