--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-linear-gradient": "^2.4.2",
+    "react-native-navigation": "^2.4.0",
     "react-native-randombytes": "^3.0.0",
     "react-native-search-bar": "^3.4.2",
     "react-native-section-list-get-item-layout": "^2.2.3",
