--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-blur": "^3.2.2",
     "react-native-camera": "^1.3.0",
     "react-native-crypto": "^2.1.2",
+    "react-native-gesture-handler": "^1.0.12",
     "react-native-haptic": "^1.0.9",
     "react-native-icloud-account-status": "^1.0.1",
     "react-native-icloudstore": "^0.9.0",
@@ -45,13 +46,14 @@
     "react-native-linear-gradient": "^2.4.2",
     "react-native-navigation": "^2.4.0",
     "react-native-randombytes": "^3.0.0",
+    "react-native-screens": "^1.0.0-alpha.19",
     "react-native-search-bar": "^3.4.2",
     "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-text-gradient": "^0.0.16",
     "react-native-tooltip": "^5.2.0",
     "react-native-touch-id": "^4.3.0",
     "react-native-vector-icons": "^6.0.2",
-    "react-navigation": "^2.18.2",
+    "react-navigation": "3.0.9",
     "react-navigation-redux-helpers": "^2.0.8",
     "react-qr-code": "^0.1.2",
     "react-redux": "^5.0.7",
