--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-text-gradient": "^0.0.16",
     "react-native-tooltip": "^5.2.0",
-    "react-native-touch-id": "^4.3.0",
+    "react-native-touch-id": "git+https://github.com/blockfirm/react-native-touch-id.git",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2",
     "react-navigation-redux-helpers": "^2.0.8",
