--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "bip32": "^1.0.2",
     "bip39": "^2.5.0",
     "bitcoinjs-lib": "^4.0.1",
+    "bs58check": "^2.1.2",
     "buffer": "^5.1.0",
     "coinselect": "^3.1.11",
+    "create-hash": "^1.2.0",
     "deepmerge": "^2.1.0",
     "events": "^3.0.0",
     "moment": "^2.22.2",
@@ -57,6 +59,7 @@
     "readable-stream": "^3.0.6",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
+    "secp256k1": "^3.6.1",
     "uuid": "^3.2.1",
     "vm-browserify": "^1.1.0"
   },
