--- a/ios/Pine/Info.plist
+++ b/ios/Pine/Info.plist
@@ -35,6 +35,8 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your photo library to change your profile picture.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>For scanning QR codes.</string>
 	<key>NSFaceIDUsageDescription</key>
