--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-haptic": "^1.0.9",
     "react-native-icloud-account-status": "^1.0.1",
     "react-native-icloudstore": "^0.9.0",
+    "react-native-image-picker": "^0.28.0",
     "react-native-iphone-x-helper": "^1.0.2",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^3.0.0-rc.3",
