--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-blur": "^3.2.2",
+    "react-native-cached-image": "^1.4.3",
     "react-native-camera": "^1.3.0",
     "react-native-crypto": "^2.1.2",
     "react-native-haptic": "^1.0.9",
