--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-image-crop-picker": "^0.22.0",
     "react-native-image-picker": "^0.28.0",
     "react-native-iphone-x-helper": "^1.0.2",
+    "react-native-keep-awake": "^4.0.0",
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-linear-gradient": "^2.4.2",
