--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "coinselect": "^3.1.11",
     "create-hash": "^1.2.0",
     "deepmerge": "^2.1.0",
+    "eccrypto": "^1.1.1",
     "events": "^3.0.0",
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
