--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment-timezone": "^0.5.21",
     "process": "^0.11.10",
     "react": "^16.6.0-alpha.8af6728",
+    "react-apple-easing": "^0.0.2",
     "react-native": "0.57.4",
     "react-native-blur": "^3.2.2",
     "react-native-cached-image": "^1.4.3",
