--- a/package.json
+++ b/package.json
@@ -51,17 +51,18 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-keychain": "^3.0.0-rc.3",
     "react-native-linear-gradient": "^2.4.2",
+    "react-native-qrcode-svg": "^5.1.2",
     "react-native-randombytes": "^3.0.0",
     "react-native-search-bar": "^3.4.2",
     "react-native-section-list-get-item-layout": "^2.2.3",
     "react-native-static-safe-area-insets": "^1.2.0",
+    "react-native-svg": "^9.4.0",
     "react-native-text-gradient": "^0.0.16",
     "react-native-tooltip": "^5.2.0",
     "react-native-touch-id": "git+https://github.com/blockfirm/react-native-touch-id.git",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.2",
     "react-navigation-redux-helpers": "^2.0.8",
-    "react-qr-code": "^0.1.2",
     "react-redux": "^5.0.7",
     "readable-stream": "^3.0.6",
     "redux": "^4.0.1",
