--- a/ios/Pine/Info.plist
+++ b/ios/Pine/Info.plist
@@ -61,6 +61,7 @@
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
+		<string>fetch</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
