--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^16.6.0-alpha.8af6728",
     "react-apple-easing": "^0.0.2",
     "react-native": "0.57.4",
+    "react-native-background-fetch": "^2.5.6",
     "react-native-blur": "^3.2.2",
     "react-native-cached-image": "^1.4.3",
     "react-native-camera": "^1.3.0",
