Upgrade React Native to v0.59.9

--- a/.babelrc
+++ b/.babelrc
@@ -6,13 +6,8 @@
   "sourceMaps": true,
   "plugins": [
     "@babel/plugin-transform-flow-strip-types",
-    "@babel/plugin-proposal-class-properties",
-    [
-      "@babel/plugin-proposal-decorators",
-      {
-        "legacy": true
-      }
-    ],
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose": true }],
     [
       "rewrite-require",
       {
