--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "coveralls": "npm run test-coverage && cat ./coverage/lcov.info | node_modules/.bin/coveralls"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.5.0",
+    "@react-native-community/netinfo": "^3.2.1",
     "assert": "^1.4.1",
     "bip21": "^2.0.2",
     "bip32": "^1.0.2",
@@ -34,9 +36,9 @@
     "moment": "^2.22.2",
     "moment-timezone": "^0.5.21",
     "process": "^0.11.10",
-    "react": "^16.6.0-alpha.8af6728",
+    "react": "16.8.3",
     "react-apple-easing": "^0.0.2",
-    "react-native": "0.57.4",
+    "react-native": "0.59.9",
     "react-native-background-fetch": "^2.5.6",
     "react-native-blur": "^3.2.2",
     "react-native-cached-image": "^1.4.3",
@@ -73,22 +75,23 @@
     "vm-browserify": "^1.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/plugin-transform-flow-strip-types": "^7.0.0",
     "@babel/preset-flow": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
+    "@babel/runtime": "^7.4.5",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.4.2",
+    "babel-jest": "^24.8.0",
     "babel-plugin-rewrite-require": "^1.14.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "coveralls": "^3.0.2",
     "eslint": "^5.8.0",
     "eslint-plugin-flowtype": "^3.2.0",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "23.6.0",
-    "react-test-renderer": "^16.6.0-alpha.8af6728",
+    "jest": "^24.8.0",
+    "metro-react-native-babel-preset": "^0.54.1",
+    "react-test-renderer": "16.8.3",
     "reactotron-react-native": "^2.1.0"
   },
   "jest": {
