--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "react-native": "0.59.9",
     "react-native-background-fetch": "^2.5.6",
     "react-native-blur": "^3.2.2",
-    "react-native-cached-image": "^1.4.3",
     "react-native-camera": "^1.13.1",
     "react-native-crypto": "^2.1.2",
+    "react-native-fast-image": "^6.0.3",
     "react-native-haptic": "^1.0.9",
     "react-native-icloud-account-status": "^1.0.1",
     "react-native-icloudstore": "^0.9.0",
