--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Pine",
-  "version": "0.4.0",
+  "version": "1.0.0-beta.1",
   "private": true,
   "author": "Timothy Engqvist Johansson <timothy@blockfirm.se>",
   "website": "https://pinewallet.co",
