--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0-beta.1",
   "private": true,
   "author": "Timothy Engqvist Johansson <timothy@blockfirm.se>",
-  "website": "https://pinewallet.co",
+  "website": "https://pine.pm",
   "copyright": "© 2019 Blockfirm AB",
   "license": "Apache-2.0",
   "repository": {
