--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.5.0",
+    "@react-native-community/blur": "^3.3.1",
     "@react-native-community/netinfo": "^3.2.1",
     "assert": "^1.4.1",
     "bip21": "^2.0.2",
@@ -40,7 +41,6 @@
     "react-apple-easing": "^0.0.2",
     "react-native": "0.59.9",
     "react-native-background-fetch": "^2.6.0",
-    "react-native-blur": "^3.2.2",
     "react-native-camera": "^1.13.1",
     "react-native-crypto": "^2.1.2",
     "react-native-fast-image": "^6.0.3",
