Create a start animation similar to Twitter’s

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-community/art": "^1.0.1",
     "@react-native-community/async-storage": "^1.5.0",
     "@react-native-community/blur": "^3.3.1",
+    "@react-native-community/masked-view": "^0.1.1",
     "@react-native-community/netinfo": "^4.1.1",
     "assert": "^1.4.1",
     "bip21": "^2.0.2",
