--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Pine",
-  "version": "1.1.0-beta.1",
+  "version": "1.2.0",
   "private": true,
   "author": "Timothy Engqvist Johansson <timothy@blockfirm.se>",
   "website": "https://pine.pm",
